kubernetes/cert-manager/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: hello-ip
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
    - secretName: hello-ssl
      hosts:
        - example.com # ❗ Replace this with your domain
  defaultBackend:
    service:
      name: hello-1
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: hello-1
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: hello-2
            port:
              number: 80
